--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 
 # Juyter notebook checkpoints
 .ipynb_checkpoints
-
+*/.ipynb_checkpoints/*
 #Egg info files produced by pip installation
 *egg-info
 
