--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-numpy
-scipy
-pandas
-matplotlib
-ipywidgets
-ipympl
-ipykernel
-astropy
-pytorch
-torchvision
-tensorflow
-scikit-learn
-
-nvidia-pyindex
+astropy==7.0.1
+ipykernel==6.29.5
+ipympl==0.9.7
+ipython==8.12.3
+ipywidgets==8.1.6
+numpy==2.1.3
+pandas==2.2.3
+pillow==11.2.1
+scikit-learn==1.6.1
+scipy==1.15.2
+tensorflow==2.19.0
